@@ -20,11 +20,11 @@ import com.palmergames.bukkit.towny.event.TownBlockPermissionChangeEvent;
 import com.palmergames.bukkit.towny.event.TownClaimEvent;
 import com.palmergames.bukkit.towny.event.TownPreAddResidentEvent;
 import com.palmergames.bukkit.towny.event.TownRemoveResidentEvent;
-import com.palmergames.bukkit.towny.event.TownSpawnEvent;
 import com.palmergames.bukkit.towny.event.damage.TownyPlayerDamagePlayerEvent;
 import com.palmergames.bukkit.towny.event.nation.NationLevelDecreaseEvent;
 import com.palmergames.bukkit.towny.event.nation.NationLevelIncreaseEvent;
 import com.palmergames.bukkit.towny.event.nation.NationPreTownLeaveEvent;
+import com.palmergames.bukkit.towny.event.teleport.SuccessfulTownyTeleportEvent;
 import com.palmergames.bukkit.towny.event.town.TownLevelDecreaseEvent;
 import com.palmergames.bukkit.towny.event.town.TownLevelIncreaseEvent;
 import com.palmergames.bukkit.towny.event.town.TownOutlawAddEvent;
@@ -208,17 +208,24 @@ public class TownyCustomListener implements Listener {
 	 * Used to display a message to the mayor and assistants of a town, alerting
 	 * them to someone spawning at their town when money is earned by the town.
 	 * 
-	 * @param event TownSpawnEvent thrown when someone spawns to town.
+	 * @param event SuccessfulTownyTeleportEvent thrown when someone spawns to town.
 	 */
 	@EventHandler(priority = EventPriority.MONITOR, ignoreCancelled = true)
-	public void onPlayerSpawnToTown(TownSpawnEvent event) {
-		if (!TownySettings.isTownSpawnPaidToTown() || event.getCost() <= 0)
+	public void onPlayerSpawnToTown(SuccessfulTownyTeleportEvent event) {
+		if (!TownySettings.isTownSpawnPaidToTown() || event.getTeleportCost() <= 0)
 			return;
-		event.getToTown().getResidents().stream()
+
+		Player player = event.getResident().getPlayer();
+		if (player == null)
+			return;
+		Town toTown = TownyAPI.getInstance().getTown(event.getTeleportLocation());
+		if (toTown == null)
+			return;
+		toTown.getResidents().stream()
 			.filter(r -> r.isOnline() && (r.isMayor() || TownyPerms.hasAssistantTownRank(r)))
 			.map(Resident::getPlayer)
 			.forEach(p -> TownyMessaging.sendMsg(p,
-				Translatable.of("msg_a_player_spawned_to_your_town_earning_you_x", event.getPlayer().getName(), TownyEconomyHandler.getFormattedBalance(event.getCost()))));
+				Translatable.of("msg_a_player_spawned_to_your_town_earning_you_x", player.getName(), TownyEconomyHandler.getFormattedBalance(event.getTeleportCost()))));
 	}
 
 	/**
